--- a/Practica_01/style.css
+++ b/Practica_01/style.css
@@ -32,12 +32,15 @@ background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, violet 100%);
    border-radius: 50px 25px/ 35px 13px;
 
 
-
+    display: flex;
+    flex-wrap: wrap;
+    
 
 }
 /*Selector de ID se manda a llamar por medio del simbolo de gato (#)*/
 #uno{
     background-color: cadetblue;
+
 }
 /*Selectores descendientes*/
 #cuatro img{
@@ -110,11 +113,18 @@ a{
     border:  1px solid #ccc;
     border-radius: 8px;
     margin: 20px;
- }
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    padding: 20px;
+}
 
 
  .imagen{
-    width: 100%;
+    width: 50%;
+    border: solid 1px #ccc;
  }
 
 
@@ -138,4 +148,16 @@ a{
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
+ }
+
+.container_tres div{
+    width: 300px;
+    height: 300px;
+    background-color: cadetblue;
+    border: 5px solid red;
+}
+ .container_tres{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
  }
